RESOLVED FIXED287591
[Cocoa] Report network transferred length instead of decoded buffer size.
https://bugs.webkit.org/show_bug.cgi?id=287591
Summary [Cocoa] Report network transferred length instead of decoded buffer size.
Basuke Suzuki
Reported 2025-02-12 16:16:48 PST
ResourceMonitor wants to use precise network usage for accuracy purposes. Add implementation to track the network transferred bytes in NetworkLoad.
Attachments
Basuke Suzuki
Comment 1 2025-02-12 17:17:55 PST
Basuke Suzuki
Comment 2 2025-02-12 17:19:25 PST
EWS
Comment 3 2025-02-13 10:52:44 PST
Committed 290353@main (1b949aac3e4f): <https://commits.webkit.org/290353@main> Reviewed commits have been landed. Closing PR #40523 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.