[Cocoa] Report network transferred length instead of decoded buffer size. https://bugs.webkit.org/show_bug.cgi?id=287591 rdar://144530889

Reviewed by Ben Nham.

ResourceMonitor wants to use precise network usage for accuracy purposes. Add implementation
to track the network transferred bytes in NetworkDataTask.

* LayoutTests/http/tests/iframe-monitor/compressed-resource-expected.txt: Added.
* LayoutTests/http/tests/iframe-monitor/compressed-resource.html: Added.
* LayoutTests/http/tests/iframe-monitor/resources/--eligible--/compressed.html: Added.
* LayoutTests/http/tests/iframe-monitor/resources/generate-byte.py:
* Source/WebCore/PAL/pal/spi/cf/CFNetworkSPI.h:
* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::didReceiveData):

Canonical link: https://commits.webkit.org/290353@main