Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm
@@ -387,6 +387,15 @@ void NetworkDataTaskCocoa::didNegotiateModernTLS(const URL& url)
 
 void NetworkDataTaskCocoa::didCompleteWithError(const WebCore::ResourceError& error, const WebCore::NetworkLoadMetrics& networkLoadMetrics)
 {
+    if (networkLoadMetrics.responseBodyBytesReceived > totalBytesTransferredOverNetwork()) {
+        WTFEmitSignpost(m_task.get(), DataTask, "responseBodyBytesReceived (%llu bytes) exceeded totalBytesTransferredOverNetwork (%zu bytes)", networkLoadMetrics.responseBodyBytesReceived, totalBytesTransferredOverNetwork());
+
+        setTotalBytesTransferredOverNetwork(networkLoadMetrics.responseBodyBytesReceived);
+
+        if (m_client)
+            m_client->didReceiveData(WebCore::SharedBuffer::create());
+    }
+
     WTFEmitSignpost(m_task.get(), DataTask, "completed with error: %d", !error.isNull());
 
     if (m_client)
@@ -397,7 +406,7 @@ void NetworkDataTaskCocoa::didReceiveData(const WebCore::SharedBuffer& data)
 {
     WTFEmitSignpost(m_task.get(), DataTask, "received %zd bytes", data.size());
 
-    setTotalBytesTransferredOverNetwork(totalBytesTransferredOverNetwork() + data.size());
+    setTotalBytesTransferredOverNetwork([m_task _countOfBytesReceivedEncoded]);
 
     if (m_client)
         m_client->didReceiveData(data);
