LayoutTests/http/tests/iframe-monitor/resources/generate-byte.py
@@ -2,6 +2,7 @@
 
 import os
 import sys
+import gzip
 import random
 import hashlib
 import string
@@ -20,16 +21,27 @@ size = int(query.get('size', ['1024'])[0])
 # if provided, generate deterministic random data and cacheable. default is not.
 seed = query.get('seed', [None])[0]
 
-# Generate random data
-if seed:
-    seed_int = int(hashlib.sha256(seed.encode()).hexdigest(), 16)  # Convert SHA-256 hash to int
-    random.seed(seed_int)
+# gzip compression or not. default is not.
+compress = supports_gzip and query.get('compress', [''])[0]
 
-data = ''.join(random.choice(string.ascii_letters + string.digits) for _ in range(size))
+# Prepare contents
+if compress:
+    data = bytes([42] * size)
+    data = gzip.compress(data)
+else:
+    # Generate random data
+    if seed:
+        seed_int = int(hashlib.sha256(seed.encode()).hexdigest(), 16)  # Convert SHA-256 hash to int
+        random.seed(seed_int)
+
+    data = ''.join(random.choice(string.ascii_letters + string.digits) for _ in range(size))
 
 # Output HTTP Headers
 if seed:
     sys.stdout.write(f'Cache-Control: public, max-age=31536000, immutable\r\n')
+
+if compress:
+    sys.stdout.write('Content-Encoding: gzip\r\n')
 
 sys.stdout.write('Content-Type: application/octet-stream\r\n')
 sys.stdout.write(f'Content-Length: {len(data)}\r\n')
@@ -38,4 +50,7 @@ sys.stdout.write('\r\n')
 sys.stdout.flush()
 
 # Output contents
-sys.stdout.write(data)
+if compress:
+    sys.stdout.buffer.write(data)
+else:
+    sys.stdout.write(data)
